<resources>
    <string name="app_name">MovieApi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="tvshow">TV Show</string>
    <string name="change_language">Change Language</string>
    <string name="title_movie">Title Movie</string>
    <string name="release">Release</string>
    <string name="popularity">Popularity</string>
    <string name="title_tv_show">Title TV Show</string>
    <string name="info_movie">Info Movie</string>
    <string name="language">Language</string>
    <string name="english">english</string>
    <string name="vote_count">Vote Count</string>
    <string name="info_tv_show">Info TV Show</string>
</resources>
