<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tv.TvshowDetailActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_tvshow"
        android:text="@string/title_tv_show"
        android:textSize="20sp"
        android:padding="10dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:id="@+id/image_tvshow"
        android:padding="10dp"
        android:scaleType="centerCrop"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/title_tvshow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/overview_tvshow"
        android:layout_margin="10dp"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@id/image_tvshow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info"
        android:text="@string/info_tv_show"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/overview_tvshow"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/language"
        android:text="@string/language"
        android:layout_margin="10dp"
        android:drawableStart="@drawable/ic_language_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/info"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/langauge_tvshow"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:text="@string/english"
        app:layout_constraintTop_toBottomOf="@id/info"
        app:layout_constraintStart_toEndOf="@id/language"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/release"
        android:text="@string/release"
        android:drawableStart="@drawable/ic_date_range_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/language"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/release_tvshow"
        android:text="@string/release"
        android:textStyle="bold"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/language"
        app:layout_constraintStart_toEndOf="@id/release"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/popular"
        android:text="@string/popularity"
        android:drawableStart="@drawable/ic_star_black_24dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/release"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/popularity_tvshow"
        android:text="@string/popularity"
        android:textStyle="bold"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/release"
        app:layout_constraintStart_toEndOf="@id/popular"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vote_count"
        android:text="@string/vote_count"
        android:layout_margin="10dp"
        android:drawableStart="@drawable/ic_show_chart_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/popular"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vote_count_tvshow"
        android:text="@string/vote_count"
        android:textStyle="bold"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/popular"
        app:layout_constraintStart_toEndOf="@id/vote_count"/>

</androidx.constraintlayout.widget.ConstraintLayout>