<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:id="@+id/img_movie"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@color/colorAccent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title_movie"
            android:text="@string/title_movie"
            android:padding="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_movie"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/release_movie"
                android:text="@string/release"
                android:drawableStart="@drawable/ic_date_range_black_24dp"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/title_movie"
                app:layout_constraintStart_toEndOf="@id/img_movie"
                android:padding="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/popularity_movie"
                android:text="@string/popularity"
                android:textSize="16sp"
                android:drawableStart="@drawable/ic_star_black_24dp"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@id/release_movie"
                app:layout_constraintStart_toEndOf="@id/img_movie"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>